--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ dependencies {
     // Dependencias Filtro
     implementation 'info.androidhive:imagefilters:1.0.7'
 
+    // Dependencias Android Universal Image Loader
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
